# Smart-BLE-Remote

./: INSTALL.md  Kconfig  README.md  prj.conf
Digital Accelerometer/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
Digital Accelerometer/driver_accelerometer/: fxls8974cf.c  fxls8974cf.h  st,fxls8974cf.yaml
Digital Accelerometer/src/: main.c
Keypad Drivers/: main.c  nrf52840dk_nrf52840.overlay  prj.conf  semtech,sx1508.yaml  semtech,sx1509b.yaml  sx1508.c  sx1508.h
Keypad Drivers/custom_board_sx1508/: smart-remote-52840.overlay
Keypad Drivers/keypad_interface/: CMakeLists.txt  nrf52840dk_nrf52840.overlay
Keypad Sensor/: nrf52840dk_nrf52840.overlay  prj.conf
Keypad Sensor/src/: main.c
Keypad sensor/: nrf52840dk_nrf52840.overlay  semtech,sx1508.yaml
Keypad sensor/drivers/: kscan_sx1508.c  kscan_sx1508.h
Keypad sensor/src/: main.c
Smart_Ble_Remote/custom_board_app/: smart-remote-52840.overlay
Zephyr drivers/: README.md  sx1509b.c
customboard_kscan_sx1508/: CMakeLists.txt  neevee_remote_52840.overlay  prj.conf
drivers/kscan/: CMakeLists.txt  Kconfig  kscan_sx1508.c
smart_ble_remote/: CMakeLists.txt  prj.conf
smart_ble_remote/boards/arm/smart-remote-52840/: smart-remote-52840.dts  smart-remote-52840_defconfig
smart_ble_remote/drivers/: CMakeLists.txt  Kconfig
smart_ble_remote/drivers/kscan/: Kconfig.sx1508  kscan_sx1508.c
smart_ble_remote/drivers/sensor/: CMakeLists.txt  Kconfig
smart_ble_remote/drivers/sensor/fxls8974cf/: CMakeLists.txt  fxls8974cf_i2c.c
smart_ble_remote/src/: main.c
src/: main.c
(+31 files in other folders)
